# slg

./: Cargo.toml  LICENSE  README.md
src/: command_runner.rs  line_manager.rs  main.rs  ui.rs
src/ui/: app.rs
test/: test.sh
