[package]
name = "slg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cansi = "2.2.1"
clap = { version = "4.0.19", features = ["derive"] }
crossterm = "0.25.0"
rayon = "1.7.0"
regex = "1.6.0"
tui = "0.19.0"
tui-textarea = "0.2.0"
